--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==3.0.0
-Flask-SQLAlchemy==3.11.9
-Flask-Login==0.6.3
-Werkzeug==3.0.1
-SQLAlchemy==2.0.23
-gunicorn==21.2.0
+Flask
+Flask-SQLAlchemy
+Flask-Login
+SQLAlchemy>=2.0.36
+gunicorn
